Ignore testing-server

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 target/
+/testing-server/
 
 # Created by https://www.toptal.com/developers/gitignore/api/jetbrains
 # Edit at https://www.toptal.com/developers/gitignore?templates=jetbrains
