Added websocket library, host config option

--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -60,5 +60,10 @@
             <version>1.15.2-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.java-websocket</groupId>
+            <artifactId>Java-WebSocket</artifactId>
+            <version>1.5.1</version>
+        </dependency>
     </dependencies>
 </project>
