--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,9 @@
   "main": "src/index.ts",
   "license": "MIT",
   "devDependencies": {
+    "@types/debug": "^4.1.5",
+    "@types/dotenv": "^8.2.0",
+    "@types/ws": "^7.2.9",
     "ts-node": "^9.0.0"
   },
   "scripts": {
@@ -11,6 +14,9 @@
     "build": "tsc"
   },
   "dependencies": {
-    "typescript": "^4.0.5"
+    "debug": "^4.2.0",
+    "dotenv": "^8.2.0",
+    "typescript": "^4.0.5",
+    "ws": "^7.3.1"
   }
 }
