--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mc-discord-regions-server",
   "version": "0.1.0",
-  "main": "src/index.ts",
+  "main": "build/index.js",
   "license": "MIT",
   "devDependencies": {
     "@types/debug": "^4.1.5",
@@ -10,7 +10,7 @@
     "ts-node": "^9.0.0"
   },
   "scripts": {
-    "dev": "ts-node src/index.ts",
+    "dev": "nodemon",
     "build": "tsc"
   },
   "dependencies": {
