--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "debug": "^4.2.0",
+    "discord.js": "^12.4.1",
     "dotenv": "^8.2.0",
     "typescript": "^4.0.5",
     "ws": "^7.3.1"
