--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "@types/debug": "^4.1.5",
     "@types/dotenv": "^8.2.0",
+    "@types/redis": "^2.8.28",
     "@types/ws": "^7.2.9",
     "ts-node": "^9.0.0"
   },
@@ -17,6 +18,8 @@
     "debug": "^4.2.0",
     "discord.js": "^12.4.1",
     "dotenv": "^8.2.0",
+    "nanoid": "^3.1.16",
+    "redis": "^3.0.2",
     "typescript": "^4.0.5",
     "ws": "^7.3.1"
   }
