--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "build": "tsc"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "debug": "^4.2.0",
     "discord.js": "^12.4.1",
     "dotenv": "^8.2.0",
