UnBind message, nodiscord command

--- a/plugin/src/main/resources/plugin.yml
+++ b/plugin/src/main/resources/plugin.yml
@@ -6,6 +6,9 @@ main: nl.codestix.mcdiscordregions.MCDiscordRegionsPlugin
 author: Stijn Rogiest
 depend: [WorldGuard]
 commands:
+ nodiscord:
+   description: Remove the connection between Discord and Minecraft.
+   usage: /nodiscord
  dregion:
    aliases: [drg]
    description: Configure the MCDiscordRegions plugin.
