Config reload command

--- a/plugin/src/main/resources/plugin.yml
+++ b/plugin/src/main/resources/plugin.yml
@@ -12,7 +12,7 @@ commands:
  dregion:
    aliases: [drg]
    description: Configure the MCDiscordRegions plugin.
-   usage: /dregion [whitelist [on|off] | kick [on|off] [kickMessage...] | limit <maxUsers> [channelName...] | prune]
+   usage: /dregion [whitelist [on|off] | kick [on|off] [kickMessage...] | limit <maxUsers> [channelName...] | prune | reload]
 
 permissions:
   discordregions.*:
